--- a/style/style.css
+++ b/style/style.css
@@ -5,4 +5,25 @@
     padding: 0;
 }
 
+html, body {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+#info {
+    background-color: rgba(64, 64, 64, 0.5);
+    line-height: 100px;
+    text-align: center;
+    width: 100%;
+    height: 100px;
+    position: absolute;
+    bottom: 0px;
+}
+
+#info input[type=range] {
+    width: 300px;
+    margin: auto;
+}
+
 
