--- a/style/style.css
+++ b/style/style.css
@@ -6,15 +6,20 @@
 }
 
 html, body {
+    text-align: center;
     width: 100%;
     height: 100%;
     overflow: hidden;
 }
 
+canvas {
+    margin: auto;
+    box-shadow: 0px 0px 2px 0px gray;
+}
+
 #info {
     background-color: rgba(64, 64, 64, 0.5);
     line-height: 100px;
-    text-align: center;
     width: 100%;
     height: 100px;
     position: absolute;
